--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "CommonJS",
     "target": "es2020",
     "strict": true,
     "moduleResolution": "node",
